# security-cam-image-detector

./: .gitignore  README.md
.github/: copilot-instructions.md
traffic_density/: .env.example  CMakeLists.txt  Dockerfile.lambda  LAMBDA_DEPLOYMENT.md  deploy-lambda.sh  main.cpp
traffic_density/docs/: ARCHITECTURE.md  LEX_LABORATORIO_EXPERIMENTAL.md
traffic_density/include/: gui_compat.hpp  traffic_density.hpp
traffic_density/infra/: README.md
traffic_density/infra/terraform/: .gitignore  Makefile  README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
traffic_density/src/: main.cpp  traffic_density.cpp
traffic_density/src/Input/: ingest.cpp
traffic_density/src/service/post_processing/: notification.cpp
traffic_density/src/service/pre_processing/: filter_image.cpp  pipeline.cpp
traffic_density/src/service/processing/: traffic_density.cpp
traffic_density/utils/: debug_frame.cpp
